--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,5 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Run make command
         run: make hello
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
